k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sms-app
spec:
  selector:
    app: backend  
  ports:
  - port: 5000
    targetPort: 5000
