k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: sms-app
spec:
  selector:
    app: mongodb-app
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
